# vac_custom

./: .gitignore  README.md  pyproject.toml
agriops_suite/: boot.py  count.py  fin_api.py  hooks.py  party.py  pos.py  pos_pwa.py  renumber.py  report_config.py
agriops_suite/fixtures/: client_script.json  custom_field.json  dashboard_chart.json  desktop_icon.json  doctype.json  number_card.json  print_format.json  property_setter.json  report.json  server_script.json  workspace.json  workspace_sidebar.json
agriops_suite/public/css/: core_fixes.css  vac_theme.bundle.css  vac_theme.css
agriops_suite/public/js/: core_fixes.js  fast_journal.bundle.js  fin_sw.js  finscope.bundle.js  finscope.js  pos_sw.js  slip_sw.js  vac_home.bundle.js  vac_pos_print.js  vac_theme.js
agriops_suite/www/: count.html  fin.html  fin.py  pos.html  pos.py  slip.html
agro_suite/: hooks.py
agro_suite/fixtures/: custom_field.json  workspace.json
agro_suite/public/css/: vac_theme.css
docs/: CAPTURE_INVENTORY.md
scripts/kp_interco/: kp_mirror.py
vac_custom/: hooks.py  modules.txt
vac_custom/fixtures/: .gitkeep
