[project]
name = "vac_custom"
authors = [
    { name = "Vijay Agro Centre", email = "rugvedhiwarkar@gmail.com" }
]
description = "Vijay Agro Centre ERPNext customizations captured as versioned fixtures (custom DocTypes, fields, scripts, workspaces) for reproducible staging <-> production."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "vac_custom"
